[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Player-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.51187, 7.13923 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "in_air"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.417908, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/in_air = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="Coyote_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="Walljump_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Jump_RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )
collide_with_areas = true

[node name="Wall_RayCasts" type="Node2D" parent="."]

[node name="LeftWall_Raycasts" type="Node2D" parent="Wall_RayCasts"]

[node name="RayCast1" type="RayCast2D" parent="Wall_RayCasts/LeftWall_Raycasts"]
position = Vector2( -5, 1 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RightWall_Raycasts" type="Node2D" parent="Wall_RayCasts"]

[node name="RayCast1" type="RayCast2D" parent="Wall_RayCasts/RightWall_Raycasts"]
position = Vector2( 4, 1 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1 )
[connection signal="timeout" from="Walljump_timer" to="." method="_on_Walljump_timer_timeout"]
